; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c___card_iscard.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c___card_iscard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_MEMCARD59 = common dso_local global i32 0, align 4
@EXI_MEMCARD123 = common dso_local global i32 0, align 4
@EXI_MEMCARD251 = common dso_local global i32 0, align 4
@EXI_MEMCARD507 = common dso_local global i32 0, align 4
@EXI_MEMCARD1019 = common dso_local global i32 0, align 4
@EXI_MEMCARD2043 = common dso_local global i32 0, align 4
@card_sector_size = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @__card_iscard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__card_iscard(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = and i32 %8, -65536
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %67

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 3
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %67

17:                                               ; preds = %12
  store i32 0, i32* %4, align 4
  %18 = load i32, i32* %3, align 4
  %19 = and i32 %18, 252
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @EXI_MEMCARD59, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %43, label %23

23:                                               ; preds = %17
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @EXI_MEMCARD123, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %43, label %27

27:                                               ; preds = %23
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* @EXI_MEMCARD251, align 4
  %30 = icmp eq i32 %28, %29
  br i1 %30, label %43, label %31

31:                                               ; preds = %27
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* @EXI_MEMCARD507, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %43, label %35

35:                                               ; preds = %31
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* @EXI_MEMCARD1019, align 4
  %38 = icmp eq i32 %36, %37
  br i1 %38, label %43, label %39

39:                                               ; preds = %35
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* @EXI_MEMCARD2043, align 4
  %42 = icmp eq i32 %40, %41
  br i1 %42, label %43, label %65

43:                                               ; preds = %39, %35, %31, %27, %23, %17
  %44 = load i32, i32* %3, align 4
  %45 = call i32 @_ROTL(i32 %44, i32 23)
  %46 = and i32 %45, 28
  store i32 %46, i32* %5, align 4
  %47 = load i32*, i32** @card_sector_size, align 8
  %48 = load i32, i32* %5, align 4
  %49 = ashr i32 %48, 2
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %47, i64 %50
  %52 = load i32, i32* %51, align 4
  store i32 %52, i32* %7, align 4
  %53 = icmp eq i32 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %43
  store i32 0, i32* %2, align 4
  br label %67

55:                                               ; preds = %43
  %56 = load i32, i32* %6, align 4
  %57 = shl i32 %56, 20
  %58 = and i32 %57, 536739840
  %59 = load i32, i32* %7, align 4
  %60 = sdiv i32 %58, %59
  store i32 %60, i32* %6, align 4
  %61 = load i32, i32* %6, align 4
  %62 = icmp sgt i32 %61, 8
  br i1 %62, label %63, label %64

63:                                               ; preds = %55
  store i32 1, i32* %4, align 4
  br label %64

64:                                               ; preds = %63, %55
  br label %65

65:                                               ; preds = %64, %39
  %66 = load i32, i32* %4, align 4
  store i32 %66, i32* %2, align 4
  br label %67

67:                                               ; preds = %65, %54, %16, %11
  %68 = load i32, i32* %2, align 4
  ret i32 %68
}

declare dso_local i32 @_ROTL(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
